--- a/Web_part/Web_template/Static/styles.css
+++ b/Web_part/Web_template/Static/styles.css
@@ -1,13 +1,13 @@
 body {
     font-family: sans-serif;
-    background: #f5f5f5;
+    background: #3c3a52;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 .container {
-    background: white;
+    background: rgba(244, 241, 241, 0.627);
     padding: 30px;
     border-radius: 12px;
     box-shadow: 0 0 12px rgba(0,0,0,0.1);
